# src/main/resources/public/api-docs/swagger.json
@@ -654,10 +654,84 @@
             }
           }
         },
-        "deprecated" : true,
         "security" : [ {
           "bearerAuth" : [ ]
         } ]
+      }
+    },
+    "/quiz/search" : {
+      "get" : {
+        "tags" : [ "quiz" ],
+        "summary" : "Search Quizzes",
+        "description" : "Search Quizzes with query search, (Without paginarion set start and end as -1)",
+        "parameters" : [ {
+          "name" : "page",
+          "in" : "query",
+          "description" : "pagination page",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "integer",
+            "default" : 0
+          }
+        }, {
+          "name" : "size",
+          "in" : "query",
+          "description" : "pagination size",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "integer",
+            "default" : 50
+          }
+        }, {
+          "name" : "sortColumn",
+          "in" : "query",
+          "description" : "Search order column",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "string",
+            "default" : "title"
+          }
+        }, {
+          "name" : "sortType",
+          "in" : "query",
+          "description" : "Search order type",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "string",
+            "default" : "desc",
+            "enum" : [ "asc", "desc" ]
+          }
+        }, {
+          "name" : "query",
+          "in" : "query",
+          "description" : "Search by word",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "quizzes",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ArraySimplifiedQuizDto"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/question" : {
@@ -990,7 +1064,6 @@
             }
           }
         },
-        "deprecated" : true,
         "security" : [ {
           "bearerAuth" : [ ]
         } ]
@@ -1360,6 +1433,27 @@
           "$ref" : "#/components/schemas/QuizDto"
         }
       },
+      "ArraySimplifiedQuizDto" : {
+        "type" : "array",
+        "items" : {
+          "$ref" : "#/components/schemas/SimplifiedQuizDto"
+        }
+      },
+      "SimplifiedQuizDto" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "integer",
+            "format" : "int64"
+          },
+          "title" : {
+            "type" : "string"
+          },
+          "description" : {
+            "type" : "string"
+          }
+        }
+      },
       "SimplifiedQuestionDto" : {
         "type" : "object",
         "properties" : {
@@ -1620,7 +1714,7 @@
         }
       },
       "QuizRequest" : {
-        "required" : [ "desctiption", "qustionIds", "title" ],
+        "required" : [ "description", "questionIds", "title" ],
         "type" : "object",
         "properties" : {
           "title" : {
@@ -1631,7 +1725,7 @@
             "type" : "string",
             "description" : "question description"
           },
-          "qustionIds" : {
+          "questionIds" : {
             "minItems" : 1,
             "type" : "array",
             "items" : {
